# libvector

./: .gitignore  CMakeLists.txt  Makefile  README.md  minimake.sh
docs/: mainpage.md
inc/: vector.h  vector_internal.h
scripts/: gen-CMakeLists.sh
src/: CMakeLists.txt  dispatch.c  vector.c
src/generic/: reallocate.c  resize.c
src/libc/: ft_calloc.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_realloc.c
src/ops/: abandon.c  adopt.c  clear.c  clone.c  create.c  destroy.c  find_nth.c  find_nth_rev.c  mem.c  peekat.c  peekback.c  peekfront.c  popat.c  popback.c  popfront.c  pushat.c  pushback.c  pushfront.c  replace.c  resize.c  set_freefunc.c  size.c  transform.c
tests/: CMakeLists.txt  basics_crit_t.c  buffer_crit_t.c  simple_t.c
tests/src/: basics.cpp  test.cpp.template  vector-basics.cpp  vector.cpp
